--- a/tutorial5/website/templates/base.html
+++ b/tutorial5/website/templates/base.html
@@ -30,6 +30,8 @@
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="/home">Home</a>
+            <a class="nav-item nav-link" href="/aboutus.html">About Us</a>
+            <a class="nav-item nav-link" href="/contactus.html">Contact Us</a>
             {% if user.is_authenticated %}
             <a class="nav-item nav-link" href="/logout">Logout</a>
             {% else %}
