--- a/tutorial5/website/templates/base.html
+++ b/tutorial5/website/templates/base.html
@@ -10,6 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel ="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css')}}"
     <script
       src="https://kit.fontawesome.com/999ca2bb93.js"
       crossorigin="anonymous"
@@ -34,6 +35,7 @@
             <a class="nav-item nav-link" href="/contactus.html">Contact Us</a>
             {% if user.is_authenticated %}
             <a class="nav-item nav-link" href="/logout">Logout</a>
+            <a class="nav-item nav-link" href="/blog">Blog</a>
             {% else %}
             <a class="nav-item nav-link" href="/login">Login</a>
             <a class="nav-item nav-link" href="/sign-up">Sign Up</a>
