--- a/tutorial5/website/templates/posts_div.html
+++ b/tutorial5/website/templates/posts_div.html
@@ -107,6 +107,12 @@
   </div>
   <br/ > {% endfor %}
 </div>
+  {% for page_num in posts.iter_pages(left_edge=1, right_edge=1m left_current=1, right_current=2)%}
+  {% if page_num %}
+    {% if posts.page == page_num %}
+    <a clss="btn  btn-info mb-4" href="{{ url_for ('views.blog', page=page_num)}}">{{page_num}}</a>
+    {%end if%}
+    {% endfor %}
 {% block footer %}
 <div align="center">
   <a href="/create-post"
