--- a/Content/website/templates/base.html
+++ b/Content/website/templates/base.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta tags and character encoding declaration -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+     <!-- Linking to Bootstrap CSS file -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel ="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css')}}"
-    <script
-      src="https://kit.fontawesome.com/999ca2bb93.js"
-      crossorigin="anonymous"
-    ></script>
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles.css') }}">
+
+    
+     <script src="https://kit.fontawesome.com/999ca2bb93.js" crossorigin="anonymous" ></script>
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
+    <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
+          <!-- Button to toggle the navigation menu on small screens -->
         <button
           class="navbar-toggler"
           type="button"
@@ -30,10 +35,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
+             <!-- Navigation links -->
             <a class="nav-item nav-link" href="/home">Home</a>
-            <a class="nav-item nav-link" href="/aboutus.html">About Us</a>
-            <a class="nav-item nav-link" href="/contactus.html">Contact Us</a>
+             <!-- Checking if the user is authenticated -->
             {% if user.is_authenticated %}
+                <!-- Displaying logout link if the user is logged in -->
+            <a class="nav-item nav-link" href="/account">Account</a>
             <a class="nav-item nav-link" href="/logout">Logout</a>
             <a class="nav-item nav-link" href="/blog">Blog</a>
             {% else %}
@@ -44,28 +51,32 @@
         </div>
       </div>
     </nav>
+
+    <!-- Flash messages to show feedback or alerts to the user -->
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %} {% for category, message in messages %} {% if category ==
     'error' %}
+      <!-- Displaying an error message -->
     <div class="alert alert-danger alter-dismissible fade show" role="alert">
       {{ message }}
       <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     </div>
     {% else %}
+      <!-- Displaying a success message -->
     <div class="alert alert-success alter-dismissible fade show" role="alert">
       {{ message }}
       <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     </div>
     {% endif %} {% endfor %} {% endif %} {% endwith %}
+
+      <!-- Main content of the page -->
     <div class="container">{% block content %}{% endblock %}</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script
-      type="text/javascript"
-      src="{{ url_for('static', filename='index.js')}}"
-    ></script>
+     <!-- Including a custom JavaScript file called 'index.js' -->
+    <script type="text/javascript" src="{{ url_for('static', filename='index.js')}}"></script>
   </body>
 </html>
