--- a/Content/website/templates/home.html
+++ b/Content/website/templates/home.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %}
-
-
+{% extends "posts_div.html" %} {% block title %}Home{% endblock %} 
+{% block content%}
+<!DOCTYPE html>
  <!-- Header - set the background image for the header in the line below-->
  <header class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/wfh8dDlNFOk/1600x900')">
     <div class="text-center my-5">
@@ -44,7 +44,5 @@
 </footer>
 </body>
 </html>
-
-
 
 {% endblock %}
