--- a/Content/website/templates/login.html
+++ b/Content/website/templates/login.html
@@ -1,8 +1,9 @@
-{% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
-%}
+{% extends "base.html" %} {% block title %}Login{% endblock %} {% block content%}
 <form method="POST">
   <h3 align="center">Login</h3>
+   <!-- Heading "Login" aligned to the center -->
   <div class="form-group">
+  <!-- Boostrap class "form-group" to group-->
     <label for="email">Email Address</label>
     <input
       type="text"
@@ -12,6 +13,7 @@
       placeholder="Enter Email"
     />
     <label for="password">Password</label>
+      <!-- Label for the password input field -->
     <input
       type="password"
       id="password"
@@ -21,7 +23,9 @@
     />
     <br />
     <div align="center">
+       <!-- Div aligned to the center -->
       <button class="btn btn-primary" type="submit">Login</button>
+      <!-- Submit button for the login form with Bootstrap styling -->
     </div>
   </div>
 </form>
