--- a/Content/website/templates/login.html
+++ b/Content/website/templates/login.html
@@ -1,32 +1,31 @@
-{% extends "base.html" %} {% block title %}Login{% endblock %} {% block content%}
-<form method="POST">
-  <h3 align="center">Login</h3>
-   <!-- Heading "Login" aligned to the center -->
-  <div class="form-group">
-  <!-- Boostrap class "form-group" to group-->
-    <label for="email">Email Address</label>
-    <input
-      type="text"
-      id="email"
-      name="email"
-      class="form-control"
-      placeholder="Enter Email"
-    />
-    <label for="password">Password</label>
-      <!-- Label for the password input field -->
-    <input
-      type="password"
-      id="password"
-      name="password"
-      class="form-control"
-      placeholder="Enter Password"
-    />
-    <br />
-    <div align="center">
-       <!-- Div aligned to the center -->
-      <button class="btn btn-primary" type="submit">Login</button>
-      <!-- Submit button for the login form with Bootstrap styling -->
+<!--Uses base template's code for base html site-->
+{% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
+  %}
+  <!--Log in page with boxes that let you type details, and button to login-->
+  <form method="POST">
+    <h3 align="center">Login</h3>
+    <div class="form-group">
+      <label for="email">Email Address</label>
+      <input
+        type="text"
+        id="email"
+        name="email"
+        class="form-control"
+        placeholder="Enter Email"
+      />
+      <label for="password">Password</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        class="form-control"
+        placeholder="Enter Password"
+      />
+      </br>
+      <div align="center">
+        <button class="btn btn-primary" type="submit">Login</button>
+      </div>
     </div>
-  </div>
-</form>
-{% endblock %}
+  </form>
+  {% endblock %}
+  
