--- a/Content/website/templates/signup.html
+++ b/Content/website/templates/signup.html
@@ -1,90 +1,84 @@
-{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
-  content %}
-  <div class="content-section">
-    <form method="POST">
-      <!-- Form for user sign-up, using the POST method to send data -->
-      {{ form.hidden_tag() }}
-      <fieldset class="form-group">
-        <legend class=" border-bottom mb-4">Join Today</legend>
-  
-        <div class="form-group">
-          {{ form.username.label(class="form-control-label") }}
-  
-          {% if form.username.errors %}
-             <!-- Check if there are any errors in the username field -->
-            {{ form.username (class="form-control form-control-lg is-invalid") }}
-            <div class="invalid-feedback">
-              <!-- Div for displaying error messages -->
-              {% for error in form.username.errors%}
-              <span>{{ error }}</span>
-                      <!-- Display each error message -->
-              {% endfor %}
-            </div>
-          {% else %}
-            {{ form.username(class="form-control form control-lg") }}
-        {% endif %} 
-        </div>
-  
-  
-        <div class="form-group">
-          {{ form.email.label(class="form-control-label") }}
-  
-          {% if form.email.errors %}
-             <!-- Check if there are any errors in the email field -->
-            {{ form.email(class="form-control form-control-lg is-invalid") }}
-            <div class="invalid-feedback">
-              <!-- Div for displaying error messages -->
-              {% for error in form.email.errors%}
-              <span>{{ error }}</span>
-                      <!-- Display each error message -->
-              {% endfor %}
-            </div>
-          {% else %}
-            {{ form.email(class="form-control form control-lg") }}
-        {% endif %} 
-        </div>
-  
-        
-  
-  
-        <div class="form-group">
-          {{ form.password.label(class="form-control-label") }}
-          {% if form.password.errors %}
-            {{ form.password(class="form-control form-control-lg is-invalid") }}
-            <div class="invalid-feedback">
-              {% for error in form.password.errors%}
-              <span>{{ error }}</span>
-              {% endfor %}
-            </div>
-          {% else %}
-            {{ form.password(class="form-control form control-lg") }}
-        {% endif %} 
-        </div>
-  
-        <div class="form-group">
-          {{ form.confirm_password.label(class="form-control-label") }}
-          {% if form.confirm_password.errors %}
-            {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
-            <div class="invalid-feedback">
-              {% for error in form.confirm_password.errors%}
-              <span>{{ error }}</span>
-              {% endfor %}
-            </div>
-          {% else %}
-            {{ form.confirm_password (class="form-control form control-lg") }}
-        {% endif %} 
-          </div>
-      </fieldset>
-      </br>
+<!--Uses base template's code for base html site-->
+<!--Signup page that allows users to sign up their account-->
+{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block content %}
+<div class="content-section">
+  <form method="POST">
+    {{ form.hidden_tag() }}
+    <fieldset class="form">
+      <legend class="border-bottom mb-4">Join Today!</legend>
       <div class="form-group">
-         <!-- Form group for the submit button -->
-        {{ form.submit(class="btn btn btn-outline-info") }}
-    </form>
-  </div>
-  
-  <div class="border-top pt-3"
-    <small class ="text-muted">
-      Already have an account?<a class="m1-2" href="{{url_for('auth.login') }}">Sign in</a>"
-         <!-- Link to the sign-in page with Bootstrap styling -->
-  {% endblock %}
-  
+        {{ form.username.label(class="form-control-label") }}
+
+        <!--If form is invalid shows error message-->
+        {% if form.username.errors %}
+          {{ form.username(class="form-control form-control-lg is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.username.errors %}
+              <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+        {% else %}
+          {{ form.username(class="form-control form-control-lg")}}
+      {% endif %}
+      </div>
+
+      <div class="form-group">
+        {{ form.email.label(class="form-control-label") }}
+
+        <!--If form is invalid shows error message-->
+        {% if form.email.errors %}
+          {{ form.email(class="form-control form-control-lg is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.email.errors %}
+              <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+        {% else %}
+          {{ form.email(class="form-control form-control-lg")}}
+      {% endif %}
+      </div>
+      
+      <div class="form-group">
+        {{ form.password.label(class="form-control-label") }}
+
+        <!--If form is invalid shows error message-->
+        {% if form.password.errors %}
+          {{ form.password(class="form-control form-control-lg is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.password.errors %}
+              <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+        {% else %}
+          {{ form.password(class="form-control form-control-lg")}}
+      {% endif %}
+      </div>
+
+      <div class="form-group">
+        {{ form.confirmpassword.label(class="form-control-label") }}
+
+        <!--If form is invalid shows error message-->
+        {% if form.confirmpassword.errors %}
+          {{ form.confirmpassword(class="form-control form-control-lg is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.confirmpassword.errors %}
+              <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+        {% else %}
+          {{ form.confirmpassword(class="form-control form-control-lg")}}
+      {% endif %}
+      </div>      
+
+    </fieldset> 
+    </br>
+    <div class="form-group">
+      {{ form.submit(class="btn btn-outline-info")}} 
+  </form>
+</div>
+
+<div class="border-top pt-3">
+  <small class="text-muted">
+    Already have an account?<a class="ml-2" href="{{ url_for('auth.login') }}">Sign In</a>
+
+{% endblock %}
