added SMC logo in navigation bar

--- a/Content/website/static/styles.css
+++ b/Content/website/static/styles.css
@@ -10835,3 +10835,11 @@ h2{
   background-position: center;
   background-size: cover;
 }
+.school{
+  position: absolute;
+  height: auto;
+  width: 40px;
+  left: 200px;
+
+
+}
