--- a/Content/website/templates/base.html
+++ b/Content/website/templates/base.html
@@ -34,6 +34,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
+            <img src="https://www.sanctamaria.school.nz/wp-content/uploads/elementor/thumbs/SM-Logo_CC-q6tcf9iti349b90fa1jrv2bdmy2j9imp0j53udi9wi.png" class="school">
             <!--Buttons that allow transfer between pages, dynamically changes depending whether user is logged in/out-->
             <a class="nav-item nav-link" href="/home">Home</a>
             {% if user.is_authenticated %}
