--- a/Content/website/templates/base.html
+++ b/Content/website/templates/base.html
@@ -19,9 +19,22 @@
       crossorigin="anonymous"
     ></script>
     <title>{% block title %}{% endblock %}</title>
+    <style>
+    /* Modify the background color */
+.navbar-custom {
+	background-color: #250031;
+}
+.footer-custom {
+	background-color: #250031;
+}
+.bg-custom{
+  background-color: #250031;
+}
+
+</style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-custom navbar-dark">
       <!--NavBar with burger dropdown-->  
       <div class="container-fluid">
         <button
@@ -33,12 +46,19 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
-          <div class="navbar-nav">
-            <img src="https://www.sanctamaria.school.nz/wp-content/uploads/elementor/thumbs/SM-Logo_CC-q6tcf9iti349b90fa1jrv2bdmy2j9imp0j53udi9wi.png" class="school">
+          &nbsp;
+          <div class="navbar-nav"><img
+            src=
+"https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Adobe_Premiere_Pro_Logo.svg/2048px-Adobe_Premiere_Pro_Logo.svg.png" 
+              alt="" width= "40" 
+              height="40"></a>&nbsp;&nbsp;
+
+              
             <!--Buttons that allow transfer between pages, dynamically changes depending whether user is logged in/out-->
             <a class="nav-item nav-link" href="/home">Home</a>
             {% if user.is_authenticated %}
             <a class="nav item nav-link" href="/account">Account</a>
+            <span class="text-white mx-1">&middot;</span>
             <a class="nav-item nav-link" href="/logout">Logout</a>
             <a class="nav-item nav-link" href="/blog">Blog</a>
             {% else %}
