--- a/Content/website/templates/home.html
+++ b/Content/website/templates/home.html
@@ -12,7 +12,7 @@
                 <div class="row gx-5 align-items-center justify-content-center">
                     <div class="col-lg-8 col-xl-7 col-xxl-6">
                         <div class="my-5 text-center text-xl-start">
-                            <h1 class="display-5 fw-bolder text-white mb-2"></h1>
+                            <h1 class="display-5 fw-bolder text-white mb-2">Premiere Pro</h1>
                             <p class="lead fw-normal text-white-50 mb-4">Discuss and show your creations with others or learn how to create media with Adobe Premiere Pro! </p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                 <a class="btn btn-outline-light btn-lg px-4 me-sm-3" href="#features">More Info</a>
