--- a/Content/website/templates/home.html
+++ b/Content/website/templates/home.html
@@ -12,7 +12,7 @@
                 <div class="row gx-5 align-items-center justify-content-center">
                     <div class="col-lg-8 col-xl-7 col-xxl-6">
                         <div class="my-5 text-center text-xl-start">
-                            <h1 class="display-5 fw-bolder text-white mb-2">Premiere Pro</h1>
+                            <h1 class="display-5 fw-bolder text-white mb-2">Content Creation</h1>
                             <p class="lead fw-normal text-white-50 mb-4">Discuss and show your creations with others or learn how to create media with Adobe Premiere Pro! </p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                 <a class="btn btn-outline-light btn-lg px-4 me-sm-3" href="#features">More Info</a>
@@ -32,8 +32,19 @@
                     <div class="col-lg-8 col-xl-6">
                         <div class="text-center">
                             <h2 class="fw-bolder">About Premiere Pro</h2>
-                            <p class="lead fw-normal text-muted mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Habitant morbi tristique senectus et netus. Ridiculus mus mauris vitae ultricies leo. Convallis posuere morbi leo urna molestie at elementum. Ultrices neque ornare aenean euismod elementum nisi quis eleifend quam. Mauris pharetra et ultrices neque ornare aenean euismod. Cursus sit amet dictum sit amet justo. In ornare quam viverra orci. Augue mauris augue neque gravida in fermentum et sollicitudin. Etiam sit amet nisl purus in mollis nunc sed id. Consectetur lorem donec massa sapien faucibus et molestie. Erat imperdiet sed euismod nisi porta lorem mollis aliquam ut. Vulputate eu scelerisque felis imperdiet. Sem viverra aliquet eget sit amet tellus cras adipiscing enim. Maecenas pharetra convallis posuere morbi leo urna.
-                            </p>
+                            <h1 class="lead fw-normal text-muted mb-5">
+                                Adobe Premiere Pro is a professional video editing software developed by Adobe Inc. It is widely used by filmmakers, video editors, and content creators to edit and produce high-quality videos for various purposes, including movies, TV shows, commercials, YouTube videos, and more. Here are some key points to understand about Adobe Premiere Pro:
+
+Video Editing: Adobe Premiere Pro allows you to import and arrange video clips, audio, images, and other media files on a timeline. You can then edit and manipulate these elements to create a cohesive and visually appealing video.
+
+User Interface: The software provides a user-friendly interface that includes panels for the timeline, preview, project media, effects, and more. Users can customize the layout based on their preferences and workflow.
+
+Timeline Editing: The timeline is where you arrange and edit your video clips. You can trim, cut, split, and rearrange clips on the timeline to create your desired sequence. Various tools are available to help you precisely edit and manipulate your footage.
+
+ is available through a subscription model as part of Adobe Creative Cloud. This means you pay a monthly or annual fee to access the software, along with updates and additional features.
+
+Whether you're a beginner or an experienced video editor, Adobe Premiere Pro offers a powerful set of tools to create professional-quality videos. It's widely recognized as one of the industry standards for video editing software.
+                            </h>
                         </div>
                     </div>
                 </div>
@@ -80,7 +91,7 @@
                     <div class="col-lg-8 col-xl-6">
                         <div class="text-center">
                             <h2 class="fw-bolder">Tutorials</h2>
-                            <p class="lead fw-normal text-muted mb-5">Learn how to create certain effects within Adobe Premiere Pro, will require plugins such as Magic Bullet, Sapphire and BCC
+                            <p class="lead fw-normal text-muted mb-5">Login to learn how to create certain effects within Adobe Premiere Pro, will require plugins such as Magic Bullet, Sapphire and BCC
                             </p>
                         </div>
                     </div>
