--- a/Content/website/templates/base.html
+++ b/Content/website/templates/base.html
@@ -48,11 +48,10 @@
         <div class="collapse navbar-collapse" id="navbar">
           &nbsp;
           <a class="navbar-nav" href="/home"><img
-            src=
-"https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Adobe_Premiere_Pro_Logo.svg/2048px-Adobe_Premiere_Pro_Logo.svg.png" 
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Adobe_Premiere_Pro_Logo.svg/2048px-Adobe_Premiere_Pro_Logo.svg.png" 
               alt="" width= "40" 
               height="40"></a>&nbsp;&nbsp;
-              <div class="navbar-nav"
+              <div class="navbar-nav">
               
             <!--Buttons that allow transfer between pages, dynamically changes depending whether user is logged in/out-->
             <a class="nav-item nav-link" href="/home">Home</a>
