created pages according to footer

--- a/Content/website/templates/create_post.html
+++ b/Content/website/templates/create_post.html
@@ -1,6 +1,6 @@
 <!--Uses base template's code for base html site-->
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-  %}
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content%}
+
   
   <div class="content-section">
     <form method="POST">
