--- a/Content/website/templates/home.html
+++ b/Content/website/templates/home.html
@@ -16,7 +16,7 @@
                             <p class="lead fw-normal text-white-50 mb-4">Discuss and show your creations with others or learn how to create media with Adobe Premiere Pro! </p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                 <a class="btn btn-outline-light btn-lg px-4 me-sm-3" href="#features">More Info</a>
-                                <a class="btn btn-outline-light btn-lg px-4" href="http://127.0.0.1:5000/sign-up">Sign Up</a>
+                                <a class="btn btn-outline-light btn-lg px-4" href="/sign-up">Sign Up</a>
                             </div>
                         </div>
                     </div>
@@ -172,11 +172,11 @@ Whether you're a beginner or an experienced video editor, Adobe Premiere Pro off
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                 <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; euriels edits 2023</div></div>
                 <div class="col-auto">
-                    <a class="link-light small" href="#!">Privacy</a>
+                    <a class="link-light small" href="/privacy">Privacy</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Terms</a>
+                    <a class="link-light small" href="/terms">Terms</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Contact</a>
+                    <a class="link-light small" href="/contact">Contact</a>
                 </div>
             </div>
         </div>
