--- a/Content/website/templates/contact.html
+++ b/Content/website/templates/contact.html
@@ -1,24 +1,74 @@
 <!--Extends code from base.html for a basic page-->
 {% extends "base.html" %} {% block title %}Home{% endblock %}
 {% block content %}
-<br>
-<br>
-<h1> Privacy Page</h1>
-    <!-- Footer-->
-    <footer class="footer-custom py-4 mt-auto">
-        <div class="container px-5">
-            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; euriels edits 2023</div></div>
-                <div class="col-auto">
-                    <a class="link-light small" href="/privacy">Privacy</a>
-                    <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="/terms">Terms</a>
-                    <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="/contact">Contact</a>
-                </div>
-            </div>
-        </div>
-    </footer>
-</body>
+<html>
+  <head>
+      <title>Contact Us page</title>
+      <br>
+      <br>
+      <br>
+      </section>
+      <section class="service">
+          <h1 class="h-primary center" style="margin-top:30px;">
+              Methods to contact me!
+          </h1>
+          <div id="service">
+              <div class="contact-card">
+                  <img src=
+                  "https://cdn-icons-png.flaticon.com/512/5968/5968528.png"
+                  alt="form_image">
+                  <h2>Online Form</h2>
+                  <p class="card-text">
+                      Click this link and be redirected to inquire any questions!
+                  </p>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfd86J9gr583bHGAeRxw-TtAsD4oD_JqdBmDqH9WP1IBLiPfQ/viewform?usp=sf_link" class="btn btn-primary">Fill Form</a>
+              </div>
+              <div class="contact-card">
+                  <img src=
+"https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png"
+                       alt="email_image">
+                  <h2>Email</h2>
+                  <p class="card-text">
+                      Send me an email anytime. Due to NCEA Exams i may respond anywhere from 24 hours to one week.
+                  </p>
+                  <a href="mailto:eurielgg@gmail.com" class="btn btn-primary">
+                    Email Us</a>
+              </div>
+              <div class="contact-card">
+                  <img src=
+ "https://w7.pngwing.com/pngs/759/922/png-transparent-telephone-logo-iphone-telephone-call-smartphone-phone-electronics-text-trademark.png"
+                  alt="phone_image">
+                  <h2>Phone Number</h2>
+                  <p class="card-text">
+                      Reach out to me throughout my personal phone number!.
+                  </p>
+                  <p class="phone-number">Call: +64221663891</p>
+              </div>
+          </div>
+      </section>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+  </body>
+</html>
+  </div>
+     <!-- Footer-->
+     <footer class="footer-custom py-4 mt-auto">
+      <div class="container px-5">
+          <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+              <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; All About Media 2023</div></div>
+              <div class="col-auto">
+                  <a class="link-light small" href="/privacy">Privacy</a>
+                  <span class="text-white mx-1">&middot;</span>
+                  <a class="link-light small" href="/terms">Terms</a>
+                  <span class="text-white mx-1">&middot;</span>
+                  <a class="link-light small" href="/contact">Contact</a>
+              </div>
+          </div>
+      </div>
+  </footer>
 
-{% endblock%}
+  {% endblock %}
