--- a/Content/website/templates/home.html
+++ b/Content/website/templates/home.html
@@ -7,24 +7,25 @@
 <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
         <!-- Header-->
-        <header class="bg-custom py-5">
+        <header class=" bg-custom py-5">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center">
                     <div class="col-lg-8 col-xl-7 col-xxl-6">
                         <div class="my-5 text-center text-xl-start">
-                            <h1 class="display-5 fw-bolder text-white mb-2">Content Creation</h1>
+                            <h1 class="display-5 fw-bolder text-white mb-2">All About Media</h1>
                             <p class="lead fw-normal text-white-50 mb-4">Discuss and show your creations with others or learn how to create media with Adobe Premiere Pro! </p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                 <a class="btn btn-outline-light btn-lg px-4 me-sm-3" href="#features">More Info</a>
-                                <a class="btn btn-outline-light btn-lg px-4" href="/sign-up">Sign Up</a>
+                                <a class="btn btn-outline-light btn-lg px-4" href="/contact">Contact Me</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5"> 
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/XceyW35RX_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div class="col-xl-5 col-xxl-1 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5"> 
                 </div>
             </div>
         </header>
+        <iframe class="youtube-video" width="560" height="615" src="https://www.youtube.com/embed/XceyW35RX_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
         <!-- Features section-->
         <section class="py-5">
             <div class="container px-5 my-5">
@@ -40,16 +41,12 @@ Video Editing: Adobe Premiere Pro allows you to import and arrange video clips, 
 User Interface: The software provides a user-friendly interface that includes panels for the timeline, preview, project media, effects, and more. Users can customize the layout based on their preferences and workflow.
 
 Timeline Editing: The timeline is where you arrange and edit your video clips. You can trim, cut, split, and rearrange clips on the timeline to create your desired sequence. Various tools are available to help you precisely edit and manipulate your footage.
-
+ 
  is available through a subscription model as part of Adobe Creative Cloud. This means you pay a monthly or annual fee to access the software, along with updates and additional features.
 
 Whether you're a beginner or an experienced video editor, Adobe Premiere Pro offers a powerful set of tools to create professional-quality videos. It's widely recognized as one of the industry standards for video editing software.
                             </h>
                         </div>
-                    </div>
-                </div>
-                              
-            </div>
         </section>
         <section class="py-5" id="features">
             <div class="container px-5 my-5">
@@ -99,11 +96,11 @@ Whether you're a beginner or an experienced video editor, Adobe Premiere Pro off
                 <div class="row gx-5">
                     <div class="col-lg-4 mb-5">
                         <div class="card h-100 shadow border-0">
-                            <img class="card-img-top" src="https://i.ytimg.com/vi/sMyYGU1_0Io/maxresdefault.jpg" alt="..." />
+                            <img class="card-img-top" src="https://i.ytimg.com/vi/VJxpDUY8iuU/maxresdefault.jpg" alt="..." />
                             <div class="card-body p-4">
                                 <div class="badge bg-primary bg-gradient rounded-pill mb-2">Premiere Pro</div>
-                                <a class="text-decoration-none link-dark stretched-link" href="#signup"><h5 class="card-title mb-3">Transitions</h5></a>
-                                <p class="card-text mb-0">How to create transitions in order for your video to flow and appeal to watchers</p>
+                                <a class="text-decoration-none link-dark stretched-link" href="#signup"><h5 class="card-title mb-3">Velocity</h5></a>
+                                <p class="card-text mb-0">Learn how to use twixtor and time remapping to make a cohesive edit</p>
                             </div>
                             <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                 <div class="d-flex align-items-end justify-content-between">
@@ -120,10 +117,10 @@ Whether you're a beginner or an experienced video editor, Adobe Premiere Pro off
                     </div>
                     <div class="col-lg-4 mb-5">
                         <div class="card h-100 shadow border-0">
-                            <img class="card-img-top" src="https://images.squarespace-cdn.com/content/v1/56091db4e4b02efb26807ec0/1508149517249-UYSZXGXL2SFN5D2QFWDS/adjustment-layers-premiere-pro.jpg?format=1000w" alt="..." />
+                            <img class="card-img-top" src="https://i.ytimg.com/vi/DDxwWatRqm0/maxresdefault.jpg" alt="..." />
                             <div class="card-body p-4">
                                 <div class="badge bg-primary bg-gradient rounded-pill mb-2">Premiere Pro</div>
-                                <a class="text-decoration-none link-dark stretched-link" href="#tutorials"><h5 class="card-title mb-3">Utilizing adjustment layers to apply VFX</h5></a>
+                                <a class="text-decoration-none link-dark stretched-link" href="#tutorials"><h5 class="card-title mb-3">Effects</h5></a>
                                 <p class="card-text mb-0">How to add adjustment layers, aswell as how to use adjustment layers to add VFX</p>
                             </div>
                             <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -141,11 +138,11 @@ Whether you're a beginner or an experienced video editor, Adobe Premiere Pro off
                     </div>
                     <div class="col-lg-4 mb-5">
                         <div class="card h-100 shadow border-0">
-                            <img class="card-img-top" src=" alt="..." />
+                            <img class="card-img-top" src="https://images.squarespace-cdn.com/content/v1/56091db4e4b02efb26807ec0/1487167476029-ASXUB8K4BKMNR57GPVS0/markers-premiere-pro.jpg?format=1000w" alt="..." />
                             <div class="card-body p-4">
                                 <div class="badge bg-primary bg-gradient rounded-pill mb-2">Premiere Pro</div>
-                                <a class="text-decoration-none link-dark stretched-link" href="#tutorials"><h5 class="card-title mb-3">Syncing clips to a musics beat</h5></a>
-                                <p class="card-text mb-0">Learn how to utilize music in order to create suspense to highlight important parts of the video</p>
+                                <a class="text-decoration-none link-dark stretched-link" href="#tutorials"><h5 class="card-title mb-3">Marking</h5></a>
+                                <p class="card-text mb-0">Learn how to mark out music beats in order to create suspense to highlight important parts of the video</p>
                             </div>
                             <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                 <div class="d-flex align-items-end justify-content-between">
@@ -170,7 +167,7 @@ Whether you're a beginner or an experienced video editor, Adobe Premiere Pro off
     <footer class="footer-custom py-4 mt-auto">
         <div class="container px-5">
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; euriels edits 2023</div></div>
+                <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; All About Media 2023</div></div>
                 <div class="col-auto">
                     <a class="link-light small" href="/privacy">Privacy</a>
                     <span class="text-white mx-1">&middot;</span>
