--- a/Content/website/templates/privacy.html
+++ b/Content/website/templates/privacy.html
@@ -3,7 +3,38 @@
 {% block content %}
 <br>
 <br>
-<h1> Privacy Page</h1>
+<h1>Privacy</h1>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<h5> We collect personal information from you, including information about your:
+    name
+    contact information
+    computer or network
+    We collect your personal information in order to:
+    Create accounts to create and see others blog posts
+    Providing some information is optional. If you choose not to enter email account, we'll be unable to offer the blog and account function.
+    We keep your information safe by implementing code and functions that hash and encrypt all personal information and only allowing staff to access the information .
+    <br>
+    <br>
+    We keep your information for 6 months at which point we securely destroy it by erasing the data base.
+    You have the right to ask for a copy of any personal information we hold about you, and to ask for it to be corrected if you think it is wrong. If you’d like to ask for a copy of your information, 
+    or to have it corrected, please contact us at 17105@my.sanctamaria.school.nz, or +64221663891, or 319 T
+    e Irirangi Drive, Flat Bush, Auckland 2016.</h5>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+</div>
     <!-- Footer-->
     <footer class="footer-custom py-4 mt-auto">
         <div class="container px-5">
