--- a/Content/website/templates/terms.html
+++ b/Content/website/templates/terms.html
@@ -3,7 +3,20 @@
 {% block content %}
 <br>
 <br>
-<h1> Privacy Page</h1>
+<h1>Terms & Conditions</h1>
+
+<h5> </h5>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+</div>
     <!-- Footer-->
     <footer class="footer-custom py-4 mt-auto">
         <div class="container px-5">
