--- a/Content/website/templates/login.html
+++ b/Content/website/templates/login.html
@@ -2,6 +2,13 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
   %}
   <br>
+  <br>
+  <br>
+  <br>
+
+  <br>
+  <br>
+  <br>
   <!--Log in page with boxes that let you type details, and button to login-->
   <form method="POST">
     <h3 align="center">Login</h3>
@@ -27,6 +34,35 @@
         <button class="btn btn-primary" type="submit">Login</button>
       </div>
     </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
   </form>
+  <!-- Footer-->
+  <footer class="footer-custom py-4 mt-auto">
+    <div class="container px-5">
+        <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+            <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; All About Media 2023</div></div>
+            <div class="col-auto">
+                <a class="link-light small" href="/privacy">Privacy</a>
+                <span class="text-white mx-1">&middot;</span>
+                <a class="link-light small" href="/terms">Terms</a>
+                <span class="text-white mx-1">&middot;</span>
+                <a class="link-light small" href="/contact">Contact</a>
+            </div>
+        </div>
+    </div>
+</footer>
   {% endblock %}
   
